fixed embed alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -728,6 +728,15 @@ section.page-template {
       width: 100%;
       height: auto;
     }
+
+    .kg-embed-card {
+      margin-left: auto;
+      margin-right: auto;
+      width: 70%;
+      @media #{$small-device} {
+        width: 100%;
+      }
+    }
   }
 }
 
